--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -58,7 +58,7 @@
                     
                   </h4>
                   <br>
-                  <h4><a href="https://www.tableau.com/">My Instagram</a></h4>
+                  <h4><a href="https://www.instagram.com/maleriecampbell/">My Instagram</a></h4>
                   <img src="./images/Me.jpg" Alt ="This is me" width="300" >
                   <img src="./images/Me2.jpg" Alt ="This is me traveling!" width="300">
                  <img src="./images/Me3.jpg"Alt = "This is me and my brother." width="300">
